[package]
name = "netstack-lwip"
version = "0.3.4"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "io-util", "net", "time", "rt", "rt-multi-thread"] }
futures = "0.3"
log = "0.4"
anyhow = "1.0"
bytes = "1"
thiserror = "1"

[build-dependencies]
cc = "1.0"
bindgen = "0.59"
